# Renderman_ALTDenoiser

./: .gitignore  README.md  RMDenoise.bat  install_houdini_package.bat  pyproject.toml
ALTProtocol/: package.json
ALTProtocol/toolbar/: ALTProtocol.shelf
rman_denoiser/: cli.py  gui.py  gui_model.py
rman_denoiser/core/: categorize.py  config.py  job.py  locate.py  runner.py
tests/: test_categorize.py  test_cli.py  test_config.py  test_gui_model.py  test_locate.py  test_runner.py
tests/fixtures/: sample_dr_config.json  sample_dr_config_crossframe.json
